--- a/Digit Classification Using ANN.ipynb
+++ b/Digit Classification Using ANN.ipynb
@@ -626,19 +626,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9108333333333334\n"
+      "Accuracy is 91%\n"
      ]
     }
    ],
    "source": [
-    "print(f'A')"
+    "print(f'Accuracy is {round((correct/total)*100)}%')"
    ]
   },
   {
